Remove deprecated ExpectedException.none() from some tests (#881)
GitOrigin-RevId: 1bb8a52167f28c97b24a357990f746863dc048a6